[package]
authors = ["Ivan Nikitin <ivan@niktivan.org>"]
description = "Small set of extensions for BufMut useful for protocol dev"
edition = "2018"
homepage = "https://github.com/Apolexian/bufmut-netext"
license = "MIT"
name = "bufmut-netext"
readme = "README.md"
repository = "https://github.com/Apolexian/bufmut-netext"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
